--- a/res/layout-normal-land/fragment_ticker.xml
+++ b/res/layout-normal-land/fragment_ticker.xml
@@ -7,10 +7,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/avg_margin"
-        android:layout_marginRight="@dimen/avg_margin"
+        android:layout_marginLeft="@dimen/normal_horizontal_ticker_margin"
+        android:layout_marginRight="@dimen/normal_horizontal_ticker_margin"
         android:layout_marginTop="@dimen/avg_margin"
-        android:background="@drawable/shadow_background" >
+        android:background="@color/Gray0"
+        android:paddingLeft="@dimen/normal_horizontal_ticker_margin"
+        android:paddingRight="@dimen/normal_horizontal_ticker_margin" >
 
         <TextView
             android:id="@+id/tickerTextDiv"
@@ -40,8 +42,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/avg_margin"
-        android:background="@drawable/shadow_background" >
+        android:layout_marginBottom="@dimen/avg_margin"
+        android:layout_marginLeft="@dimen/normal_horizontal_ticker_margin"
+        android:layout_marginRight="@dimen/normal_horizontal_ticker_margin"
+        android:layout_marginTop="@dimen/avg_margin"
+        android:background="@color/Gray0"
+        android:paddingLeft="@dimen/normal_horizontal_ticker_margin"
+        android:paddingRight="@dimen/normal_horizontal_ticker_margin" >
 
         <TextView
             android:id="@+id/tickerLastName"
@@ -67,7 +74,7 @@
             android:layout_alignBottom="@+id/tickerLastDots"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
-            android:maxLength="28"
+            android:maxLength="23"
             android:text="-"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -97,7 +104,7 @@
             android:layout_alignBottom="@+id/tickerVolumeName"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/standard_margin"
-            android:maxLength="50"
+            android:maxLength="40"
             android:text="-"
             android:textColor="@color/Black90" />
 
@@ -106,10 +113,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tickerVolumeValue"
-            android:layout_marginRight="@dimen/min_margin"
             android:layout_marginTop="@dimen/standard_margin"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/min_margin" >
+            android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/tickerBuyButton"
@@ -140,8 +145,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/avg_margin"
-        android:layout_marginLeft="@dimen/avg_margin"
-        android:layout_marginRight="@dimen/avg_margin"
+        android:layout_marginLeft="@dimen/normal_horizontal_ticker_margin"
+        android:layout_marginRight="@dimen/normal_horizontal_ticker_margin"
         androidPlot.graphWidget.marginBottom="20dp"
         androidPlot.graphWidget.marginLeft="@dimen/avg_margin"
         androidPlot.graphWidget.marginTop="@dimen/standard_margin" />
