--- a/res/layout-normal-land/fragment_addprofile.xml
+++ b/res/layout-normal-land/fragment_addprofile.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/addprofileTextLabel"
-        android:layout_marginLeft="@dimen/standard_margin"
+        android:layout_marginLeft="@dimen/normal_horizontal_profiles_margin"
         android:layout_marginRight="@dimen/high_margin"
         android:layout_marginTop="@dimen/standard_margin"
         android:layout_toLeftOf="@+id/addProfileQuestion1"
@@ -61,9 +61,9 @@
         android:id="@+id/addprofilePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/addprofileSecret"
         android:layout_alignRight="@+id/addprofileSecret"
         android:layout_below="@id/addprofileSecret"
-        android:layout_marginLeft="@dimen/standard_margin"
         android:layout_marginTop="@dimen/med_margin"
         android:ems="10"
         android:hint="@string/pass_profiles_hint"
@@ -75,7 +75,7 @@
     <TextView
         android:id="@+id/addprofileTips"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/Gray2"
         android:drawableLeft="@drawable/tips"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/addprofileSecret"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/high_margin"
+        android:layout_marginRight="@dimen/normal_horizontal_profiles_margin"
         android:src="@drawable/question" />
 
     <ImageView
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/addprofilePassword"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/high_margin"
+        android:layout_marginRight="@dimen/normal_horizontal_profiles_margin"
         android:src="@drawable/question" />
 
     <RelativeLayout
@@ -119,7 +119,6 @@
             android:text="@string/add_profile_button"
             android:textColor="@color/Gray"
             android:textSize="14sp" />
-
     </RelativeLayout>
 
 </RelativeLayout>
