--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -11,4 +11,14 @@
         <item name="android:src">@drawable/dots</item>
     </style>
 
+    <style name="ChatCheckedLineStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">@dimen/standard_margin</item>
+        <item name="android:paddingRight">@dimen/standard_margin</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layerType">software</item>
+        <item name="android:src">@drawable/chat_mark_line</item>
+    </style>
+
 </resources>
