--- a/res/layout-large-land/activity_trade.xml
+++ b/res/layout-large-land/activity_trade.xml
@@ -45,6 +45,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/high_margin"
+            android:ellipsize="end"
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/amount"
@@ -61,6 +62,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/med_margin"
+            android:ellipsize="end"
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/price"
