--- a/res/layout-normal-land/activity_trade.xml
+++ b/res/layout-normal-land/activity_trade.xml
@@ -43,6 +43,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:ellipsize="end"
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/amount"
@@ -60,6 +61,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:ellipsize="end"
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/price"
