--- a/res/layout/activity_trade.xml
+++ b/res/layout/activity_trade.xml
@@ -43,6 +43,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/high_margin"
+            android:ellipsize="end"
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/amount"
@@ -59,6 +60,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/med_margin"
+            android:ellipsize="end"
             android:ems="10"
             android:gravity="center_horizontal"
             android:hint="@string/price"
