--- a/res/xml/widget_half_meta.xml
+++ b/res/xml/widget_half_meta.xml
@@ -4,7 +4,7 @@
     android:minHeight="40dp"
     android:minResizeWidth="40dp"
     android:minWidth="110dp"
-    android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="7200000" >
+    android:resizeMode="horizontal"
+    android:updatePeriodMillis="0" >
 
 </appwidget-provider>
