--- a/res/xml/widget_meta.xml
+++ b/res/xml/widget_meta.xml
@@ -4,7 +4,7 @@
     android:minHeight="40dp"
     android:minResizeWidth="110dp"
     android:minWidth="250dp"
-    android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="7200000" >
+    android:resizeMode="horizontal"
+    android:updatePeriodMillis="0" >
 
 </appwidget-provider>
